--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,16 @@
 </head>
 <body>
 
-<div id='coins'></div>
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item active" aria-current="page">Cryptocurrencies Rank</li>
+    </ol>
+</nav>
+
+<div class="d-flex p-3 bd-highlight">
+  <div id='coins'></div>
+</div>
+
 <script type="text/javascript" src="script.js"></script>
 
 </body>
